--- a/test/fixtures/feeds.yml
+++ b/test/fixtures/feeds.yml
@@ -1,7 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  url: MyString
+  url: MyStringOne
+  title: MyString
+  description: MyString
+  language: MyString
+  published_at: 2017-09-09 01:03:06
 
 two:
-  url: MyString
+  url: MyStringTwo
+  title: MyString
+  description: MyString
+  language: MyString
+  published_at: 2017-09-09 01:03:06
